2005-02-22  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2005-02-22  Christian Neumair  <chris@gnome-de.org>

	* .cvsignore:
	* po/.cvsignore:
	* src/.cvsignore: Added.

	* src/Makefile.am:
	* configure.in: Don't depend on GNOME-VFS, eel.
	* src/*.c: Use uri->path converter from glib instead of relying on
	GNOME-VFS. Other minor cleanups, include fixes.

2005-02-22  Christian Neumair  <chris@gnome-de.org>

	* *: Checked into CVS with slight code fixes.

== 0.1 "Tarball Lost" Release ==

2004-05-09  Christian Neumair  <chris@gnome-de.org>

	* *: Initial release.