@@ -26,16 +26,17 @@ fi
 
 PKG_CHECK_MODULES(NAUTILUS, libnautilus-extension >= $NAUTILUS_REQUIRED glib-2.0 >= $GLIB_REQUIRED)
 PKG_CHECK_MODULES(GCONF, gconf-2.0)
+PKG_CHECK_MODULES(SN, libstartup-notification-1.0)
 
 dnl make GNOME_CFLAGS and GNOME_LIBS available
 AC_SUBST(NAUTILUS_CFLAGS)
 AC_SUBST(NAUTILUS_LIBS)
 
-AC_SUBST(GNOMEVFS_CFLAGS)
-AC_SUBST(GNOMEVFS_LIBS)
-
 AC_SUBST(GCONF_CFLAGS)
 AC_SUBST(GCONF_LIBS)
+
+AC_SUBST(SN_CFLAGS)
+AC_SUBST(SN_LIBS)
 
 dnl intltool stuff
 AC_PROG_INTLTOOL(0.18)
