@@ -8,12 +8,13 @@ INCLUDES =						\
 	-Werror                                         \
 	$(DISABLE_DEPRECATED_CFLAGS)			\
 	$(NAUTILUS_CFLAGS)				\
-	$(GCONF_CFLAGS)
+	$(GCONF_CFLAGS)					\
+	$(SN_CFLAGS)
 
 # FIXME: get this from the .pc file
 nautilus_extensiondir=$(libdir)/nautilus/extensions-1.0
 
-nautilus_extension_LTLIBRARIES=libnautilus-open_terminal.la
+nautilus_extension_LTLIBRARIES=libnautilus-open-terminal.la
 
 libnautilus_open_terminal_la_SOURCES = \
 	nautilus-open-terminal.c       \
@@ -21,4 +22,4 @@ libnautilus_open_terminal_la_SOURCES = \
 	open-terminal.c
 
 libnautilus_open_terminal_la_LDFLAGS = -module -avoid-version
-libnautilus_open_terminal_la_LIBADD  = $(NAUTILUS_LIBS) $(GNOMEVFS_LIBS) $(GCONF_LIBS)
+libnautilus_open_terminal_la_LIBADD  = $(NAUTILUS_LIBS) $(GNOMEVFS_LIBS) $(GCONF_LIBS) $(SN_LIBS)
