@@ -1,3 +1,7 @@
+2005-02-23  Christian Neumair  <chris@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2005-02-22  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Added Canadian English translation.
