@@ -1,3 +1,12 @@
+2005-02-23  Christian Neumair  <chris@gnome-de.org>
+
+	* src/Makefile.am: Fix library name.
+
+	* src/nautilus-open-terminal.c: Use new helper and bitfield to get
+	terminal-specific file info from NautilusFileInfo and use home
+	path as working directory if terminal is fired up from desktop.
+	Simplify/clean-up code.
+
 2005-02-22  Adam Weinberger  <adamw@gnome.org>
 
 	* configure.in: Added en_CA to ALL_LINGUAS.
